--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,3 +50,4 @@ jobs:
       with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: decide/coverage.xml 
+# pepe
