--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -51,3 +51,4 @@ jobs:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: decide/coverage.xml 
 # pepe
+#pepa
